--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
 <body>
     <div class="banner">
         <div class="container">
-            <h1>Le Wagon</h1>
-            <h2>Change your life, learn to code</h2>
-            <a href="#" class="btn-purple">Apply now </a>
+            <h1>Change your life, learn to code</h1>
+            <h2>Le Wagon brings tech skills to creative people</h2>
+            <a href="#apply-section" class="btn-purple">Apply now</a>
         </div>
     </div>
     <div class="container">
-        
-        <h2>1-Container</h2>
-        <h2>2-Avatar</h2>
-        <img class="avatar" src="images/perro.jpeg" alt="perro profile">
-        <h2>3- btn</h2>
-        <a href="#" class="btn-purple">Suscribe now</a>
+        <h2>Le Wagon´s campuses</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="images/paris.jpeg" alt="Le Wagon Paris">
+                <h3> Paris</h3>
+            </div>
+            <div class="card">
+                <img src="images/paris.jpeg" alt="Le Wagon Rio">
+                <h3> Rio</h3>
+            </div>
+            <div class="card">
+                <img src="images/paris.jpeg" alt="Le Wagon Shanghai">
+                <h3>Shanghai</h3>
+            </div>
+        </div>
     </div>
-    
+    <div id="apply-section">
+        <div data-tf-live="01HHDSKEC43C22GTM89FSS6CCA"></div>
+        <script src="//embed.typeform.com/next/embed.js"></script>
+    </div>
 </body>
 </html>
